Final comment made to PWM_tb

--- a/Exercise5/Exercise5/Exercise5.runs/impl_1/.vivado.begin.rst
+++ b/Exercise5/Exercise5/Exercise5.runs/impl_1/.vivado.begin.rst
@@ -3,3 +3,8 @@
     <Process Command="vivado.bat" Owner="dgchi" Host="LAPTOP-RH96MGM6" Pid="22136" HostCore="12" HostMemory="08216391680">
     </Process>
 </ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="dgchi" Host="LAPTOP-RH96MGM6" Pid="22156" HostCore="12" HostMemory="08216391680">
+    </Process>
+</ProcessHandle>
